[gd_scene load_steps=65 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/witch_new.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/witch_wand.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/PlayerFSM.gd" type="Script" id=4]
[ext_resource path="res://Entities/Player/PlayerHurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Player/PlayerStats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/FlashShader.tres" type="Material" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Crawl"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Crouch"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 21 ]
}

[sub_resource type="Animation" id=4]
resource_name = "CrouchDamaged"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_anim_damaged_finished"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "knockback"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "CrouchDeath"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_anim_death_finished"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 20, 19, 18 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_anim_damaged_finished"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PlayerHurtbox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "knockback"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "DamagedEffect"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_anim_death_finished"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Crawl"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Crouch"

[sub_resource type="AnimationNodeAdd2" id=15]

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "DamagedEffect"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "CrouchDamaged"

[sub_resource type="AnimationNodeBlendTree" id=18]
nodes/Add2/node = SubResource( 15 )
nodes/Add2/position = Vector2( 640, 100 )
nodes/Animation/node = SubResource( 17 )
nodes/Animation/position = Vector2( 360, 60 )
"nodes/Animation 2/node" = SubResource( 16 )
"nodes/Animation 2/position" = Vector2( 360, 180 )
nodes/output/position = Vector2( 860, 100 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "Animation", "Add2", 1, "Animation 2" ]

[sub_resource type="AnimationNodeAdd2" id=19]

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "CrouchDeath"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "DamagedEffect"

[sub_resource type="AnimationNodeBlendTree" id=22]
graph_offset = Vector2( 0, 65.5 )
nodes/Add2/node = SubResource( 19 )
nodes/Add2/position = Vector2( 660, 100 )
nodes/Animation/node = SubResource( 21 )
nodes/Animation/position = Vector2( 400, 200 )
"nodes/Animation 2/node" = SubResource( 20 )
"nodes/Animation 2/position" = Vector2( 400, 80 )
nodes/output/position = Vector2( 920, 100 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "Animation 2", "Add2", 1, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "CrouchToIdle"

[sub_resource type="AnimationNodeAdd2" id=24]
filter_enabled = true
filters = [ ".", "Body/Sprite:frame", "Body:material:shader_param/flash_modifier", "StateMachine" ]

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "DamagedEffect"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Damaged"

[sub_resource type="AnimationNodeBlendTree" id=27]
nodes/Add2/node = SubResource( 24 )
nodes/Add2/position = Vector2( 600, 60 )
nodes/Animation/node = SubResource( 26 )
nodes/Animation/position = Vector2( 360, 40 )
"nodes/Animation 2/node" = SubResource( 25 )
"nodes/Animation 2/position" = Vector2( 340, 180 )
nodes/output/position = Vector2( 880, 60 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "Animation", "Add2", 1, "Animation 2" ]

[sub_resource type="AnimationNodeAdd2" id=28]

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "DamagedEffect"

[sub_resource type="AnimationNodeBlendTree" id=31]
nodes/Add2/node = SubResource( 28 )
nodes/Add2/position = Vector2( 660, 80 )
nodes/Animation/node = SubResource( 30 )
nodes/Animation/position = Vector2( 340, 180 )
"nodes/Animation 2/node" = SubResource( 29 )
"nodes/Animation 2/position" = Vector2( 360, 60 )
nodes/output/position = Vector2( 940, 80 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "Animation 2", "Add2", 1, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "IdleToCrouch"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
advance_condition = "damaged"

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
advance_condition = "damaged"

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
advance_condition = "damaged"

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
advance_condition = "damaged"

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachine" id=51]
states/Crawl/node = SubResource( 13 )
states/Crawl/position = Vector2( 1306, 85 )
states/Crouch/node = SubResource( 14 )
states/Crouch/position = Vector2( 1080, 85 )
states/CrouchDamaged/node = SubResource( 18 )
states/CrouchDamaged/position = Vector2( 1080, 276.821 )
states/CrouchDeath/node = SubResource( 22 )
states/CrouchDeath/position = Vector2( 1306, 276.821 )
states/CrouchToIdle/node = SubResource( 23 )
states/CrouchToIdle/position = Vector2( 842, 132.821 )
states/Damaged/node = SubResource( 27 )
states/Damaged/position = Vector2( 602, 276.821 )
states/Death/node = SubResource( 31 )
states/Death/position = Vector2( 338, 276.821 )
states/Idle/node = SubResource( 32 )
states/Idle/position = Vector2( 602, 85 )
states/IdleToCrouch/node = SubResource( 33 )
states/IdleToCrouch/position = Vector2( 842, 43 )
states/Run/node = SubResource( 34 )
states/Run/position = Vector2( 338, 85 )
transitions = [ "Idle", "IdleToCrouch", SubResource( 35 ), "CrouchToIdle", "Idle", SubResource( 36 ), "Idle", "Run", SubResource( 37 ), "Run", "Idle", SubResource( 38 ), "Idle", "Damaged", SubResource( 39 ), "Damaged", "Idle", SubResource( 40 ), "Crawl", "Crouch", SubResource( 41 ), "Crouch", "CrouchToIdle", SubResource( 42 ), "Crouch", "Crawl", SubResource( 43 ), "IdleToCrouch", "Crouch", SubResource( 44 ), "Crouch", "CrouchDamaged", SubResource( 45 ), "CrouchDamaged", "Crouch", SubResource( 46 ), "Idle", "Death", SubResource( 47 ), "Crouch", "CrouchDeath", SubResource( 48 ), "Run", "Death", SubResource( 49 ), "Crawl", "CrouchDeath", SubResource( 50 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( 127, 13.8857 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=52]

[sub_resource type="Animation" id=53]
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 )
}

[sub_resource type="CapsuleShape2D" id=54]
radius = 21.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=55]
radius = 14.0
height = 12.0

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 11, 2 )

[sub_resource type="CapsuleShape2D" id=57]
radius = 21.0
height = 16.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 1 )

[node name="PlayerStats" parent="." instance=ExtResource( 6 )]
max_health = 50

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Body" type="Position2D" parent="."]
material = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Body"]
use_parent_material = true
position = Vector2( -32, -38 )
z_index = 1
texture = ExtResource( 2 )
centered = false
hframes = 31

[node name="Arm" type="Area2D" parent="Body"]
use_parent_material = true
position = Vector2( 1, 2 )
input_pickable = false
collision_layer = 2
collision_mask = 5

[node name="SpriteWand" type="Sprite" parent="Body/Arm"]
use_parent_material = true
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Arm"]
visible = false
position = Vector2( 22, 9 )
shape = SubResource( 1 )

[node name="WandPoint" type="Position2D" parent="Body/Arm"]
position = Vector2( 25, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crawl = SubResource( 2 )
anims/Crouch = SubResource( 3 )
anims/CrouchDamaged = SubResource( 4 )
anims/CrouchDeath = SubResource( 5 )
anims/CrouchToIdle = SubResource( 6 )
anims/Damaged = SubResource( 7 )
anims/DamagedEffect = SubResource( 8 )
anims/Death = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/IdleToCrouch = SubResource( 11 )
anims/Run = SubResource( 12 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 51 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 52 )
parameters/conditions/damaged = false
parameters/conditions/death = false
parameters/CrouchDamaged/Add2/add_amount = 1.0
parameters/CrouchDeath/Add2/add_amount = 1.0
parameters/Damaged/Add2/add_amount = 1.0
parameters/Death/Add2/add_amount = 1.0

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/Respawn = SubResource( 53 )

[node name="StandCollision" type="CollisionShape2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -2, -2 )
shape = SubResource( 54 )

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -2, 12 )
rotation = 1.5708
shape = SubResource( 55 )
disabled = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpPressedTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Raycasts" type="Node2D" parent="."]
visible = false
position = Vector2( 4, 17 )

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CanStandRaycasts" type="Node2D" parent="."]
visible = false
position = Vector2( 4, -2 )

[node name="CanStandRaycast" type="RayCast2D" parent="CanStandRaycasts"]
position = Vector2( -14, 0 )
rotation = -3.14159
cast_to = Vector2( 0, 20 )

[node name="CanStandRaycast2" type="RayCast2D" parent="CanStandRaycasts"]
position = Vector2( -2, 0 )
rotation = -3.14159
cast_to = Vector2( 0, 20 )

[node name="CanStandRaycast3" type="RayCast2D" parent="CanStandRaycasts"]
position = Vector2( 18, 0 )
rotation = -3.14159
cast_to = Vector2( 0, 20 )

[node name="KnockbackRaycast" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -32, 0 )

[node name="Stomp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stomp"]
position = Vector2( -2, 27 )
shape = SubResource( 56 )

[node name="PlayerHurtbox" parent="." groups=[
"Hurtbox",
] instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 0
stats_path = NodePath("../PlayerStats")
knockback_raycast_path = NodePath("../KnockbackRaycast")

[node name="CollisionShape2D" parent="PlayerHurtbox" index="0"]
position = Vector2( -1, -4 )
shape = SubResource( 57 )

[node name="Label" type="Label" parent="."]
margin_left = -42.0
margin_top = -47.0
margin_right = -1.0
margin_bottom = -33.0
grow_vertical = 0
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 10.0
margin_top = -49.0
margin_right = 51.0
margin_bottom = -35.0
grow_vertical = 0
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="JumpPressedTimer" to="." method="_on_JumpPressedTimer_timeout"]

[editable path="PlayerHurtbox"]
